<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hc_logo"
        android:tint="@color/primary"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="45dp"
        android:layout_below="@+id/image"
        android:text="@string/upload_started"/>

    <CheckBox
        android:id="@+id/not_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:padding="10dp"
        android:layout_marginLeft="45dp"
        android:text="@string/do_not_show_again"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        android:theme="@style/Button.Primary"
        android:layout_width="wrap_content"
        android:layout_below="@+id/not_again"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/trial_continue"
        app:cornerRadius="@dimen/button_corner_radius" />

</RelativeLayout>
