<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".TrialFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/primary"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/hc_logo"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/timer_image"
            android:layout_below="@+id/banner"
            android:layout_marginTop="@dimen/timesaving_margin_top"
            android:src="@drawable/timer"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/trial_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timer"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/trial_expired"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/trial_purchase_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trial_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/trial_purchase_desc"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/account_remove_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trial_purchase_desc"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/account_remove_1_day_remaining"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:weightSum="2"
            android:padding="@dimen/standard_padding">

            <com.google.android.material.button.MaterialButton
                android:theme="@style/Button.Login"
                android:id="@+id/trial_purchase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/trial_purchase"
                android:layout_marginRight="@dimen/standard_half_margin"
                android:layout_marginEnd="@dimen/standard_half_margin"
                app:cornerRadius="@dimen/button_corner_radius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trial_continue"
                android:theme="@style/OutlineLogindButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/trial_continue"
                app:cornerRadius="@dimen/button_corner_radius" />

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
